hphp/hack/test/typecheck/goto/goto_mid_statement.php.exp
File "goto_mid_statement.php", line 4, characters 17-17:
An expression is expected here. (Parsing[1002])
File "goto_mid_statement.php", line 4, characters 12-15:
Unbound name: `goto` (a global constant) (Naming[2049])
