hphp/hack/test/typecheck/goto/goto_mid_statement.php
<?hh // partial

function test(): void {
  $x = 5 + goto L0;
}
